# coding-challenge-00

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: assistant.rs  error.rs  language.rs  lib.rs  main.rs  roman.rs
tests/: simple.rs
