[package]
name = "intra"
authors = ["Simone Walter <waltersz@protonmail.com>"]
version = "0.1.1"
edition = "2021"
description = "The intergalactic numeric translator"
repository = "https://github.com/crabs-n-simone/coding-challenge-00"
license = "MIT"
publish = false

[dependencies]
rust_decimal = "1.25"
rust_decimal_macros = "1.25"
hashbrown = "0.12"
thiserror = "1.0"
regex = "1.5"
lazy_static = "1.4"
clap = { version = "3.2", features = ["derive", "cargo", "wrap_help", "unicode"] }
rustyline = "9.1"
